--- a/Lab 2 - Deep Learning for images.ipynb
+++ b/Lab 2 - Deep Learning for images.ipynb
@@ -1391,13 +1391,13 @@
    "source": [
     "Let us sum it up and design a filter by hand:\n",
     "\n",
-    "0. A good visualization of kernels for images [can be found here](http://setosa.io/ev/image-kernels/).\n",
-    "1. Create a simple convolution filter, for example a [Laplacian operator](http://aishack.in/tutorials/image-convolution-examples/) $(3,3)$ (a common discretization for it). It is useful to detect edges, but is sensible to noise. We could smooth the image with a gaussian filter first for best results.\n",
-    "2. Duplicate it 3 times and reshape it so that it matches the 3 channels of the image as well as the first dimensiom of the tensors (1) : $(1,3,3,3)$. This first dimension only means there's 1 input image (there could be more at once).\n",
+    "0. How do kernels apply to images? A good visualization of kernels for images [can be found here](http://setosa.io/ev/image-kernels/).\n",
+    "1. Let us create a simple convolution filter, for example a [Laplacian operator](http://aishack.in/tutorials/image-convolution-examples/) $(3,3)$ ( actually just a common discretization for it). It is useful to detect edges, but is sensible to noise. We could smooth the image with a gaussian filter first for best results.\n",
+    "2. Duplicate it 3 times and reshape it so that it fits the torch format : $(1,3,3,3)$ meaning there is 1 filter with 3 channels of size $(3,3)$.\n",
     "3. Create another torch tensor.\n",
     "    - there are 3 input channels.\n",
-    "    - This time we will use only 1 output channel: the sum of the filtered image for each channel.\n",
-    "    - kernel size is 3 (since we have began with a $(3,3)$ matrix).\n",
+    "    - This time we will use only 1 output channel: the sum of the filtered images for each channel.\n",
+    "    - kernel size is 3 (since we have begun with a $(3,3)$ matrix).\n",
     "    - basic stride and padding.\n",
     "    - set its weight matrix with our filter."
    ]
@@ -1471,7 +1471,7 @@
     "$$\n",
     "This function is implemented by [`torch.nn.ReLU()`](https://pytorch.org/docs/stable/nn.html#torch.nn.ReLU). \n",
     "\n",
-    "1. Create a gradient filter, and replicate for the 3 channels\n",
+    "1. Create a gradient filter, and replicate it for the 3 channels\n",
     "2. Concatenate it with its opposite (gradient and opposite of gradients) -> We will have 2 ouput images, concatenated.\n",
     "3. Apply the ReLU filter. It keeps only zones with positive values (high gradient, not only in absolute value).\n"
    ]
